--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "react-signed-scroll",
 	"version": "1.0.0",
 	"description": "A react scrolling component",
-	"main": "index.js",
+	"main": "src/index.js",
 	"author": "Alex Munene",
 	"repository": {
 		"type": "git",
@@ -57,15 +57,6 @@
 		"webpack": "^4.43.0",
 		"webpack-cli": "^3.3.12",
 		"webpack-dev-server": "^3.11.0"
-	},
-	"babel": {
-		"presets": [
-			"@babel/preset-env",
-			"@babel/preset-react"
-		],
-		"plugins": [
-			"@babel/plugin-proposal-class-properties"
-		]
 	},
 	"eslintConfig": {
 		"env": {
